[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/HealthUI.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.692308 )
colors = PoolColorArray( 1, 1, 1, 0.784314 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 1

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.662722 )
colors = PoolColorArray( 0.133333, 0.121569, 0.121569, 0.784314 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )
width = 1

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.491124 )
colors = PoolColorArray( 0.788235, 0.0588235, 0.0588235, 0.784314 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )
width = 1

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.502959 )
colors = PoolColorArray( 0.231373, 0.780392, 0.0980392, 0.784314 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )
width = 1

[node name="StatsUI" type="Control"]
margin_left = 5.0
margin_top = 5.0
margin_right = 69.0
margin_bottom = 17.0
rect_scale = Vector2( 0.998046, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Control" parent="."]
margin_bottom = 6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outline" type="TextureRect" parent="Health"]
margin_right = 66.0
margin_bottom = 6.0
rect_min_size = Vector2( 3, 6 )
texture = SubResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIEmpty" type="TextureRect" parent="Health"]
margin_left = 1.0
margin_top = 1.0
margin_right = 65.0
margin_bottom = 5.0
rect_min_size = Vector2( 1, 4 )
texture = SubResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIFull" type="TextureRect" parent="Health"]
margin_left = 1.0
margin_top = 1.0
margin_right = 59.0
margin_bottom = 5.0
rect_min_size = Vector2( 1, 4 )
texture = SubResource( 6 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stamina" type="Control" parent="."]
margin_top = 11.0
margin_right = 1.0
margin_bottom = 17.0
rect_min_size = Vector2( 1, 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outline" type="TextureRect" parent="Stamina"]
margin_right = 66.0
margin_bottom = 6.0
rect_min_size = Vector2( 3, 6 )
texture = SubResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaUIEmpty" type="TextureRect" parent="Stamina"]
margin_left = 1.0
margin_top = 1.0
margin_right = 65.0
margin_bottom = 5.0
rect_min_size = Vector2( 1, 4 )
texture = SubResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaUIFull" type="TextureRect" parent="Stamina"]
margin_left = 1.0
margin_top = 1.0
margin_right = 48.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 4 )
texture = SubResource( 8 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Control" parent="."]
margin_left = 241.472
margin_top = -1.0
margin_right = 241.472
margin_bottom = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="Points"]
margin_right = 67.0
margin_bottom = 14.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Level: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsLabel" type="Label" parent="Points"]
margin_top = 19.0
margin_right = 66.0
margin_bottom = 33.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
custom_constants/shadow_as_outline = 1
text = "Points:"
